Fixed size of back to top button on mobile

--- a/index.css
+++ b/index.css
@@ -830,9 +830,12 @@ body
     font-size: 1.8em;
     margin: 0px;
   }
+  .back_to_top
+  {
+    margin-bottom: 6vh;
+  }
   .back_to_top_inner
   {
-    font-size: 2em;
-    margin-bottom: 5vh;
+    font-size: 2.6em;
   }
 }
